fixed features section overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -194,6 +194,9 @@ section {
 
    font-weight: 500;
 }
+.inner {
+   overflow: hidden;
+}
 /* ---------- Skills ---------- */
 .skills {
    background-color: var(--clr-pink);
